--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/extension-bubble-menu": "^2.0.3",
+    "@tiptap/extension-code-block-lowlight": "^2.0.3",
+    "@tiptap/extension-floating-menu": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
+    "highlight.js": "^11.8.0",
+    "light": "^2.0.0-alpha.26",
+    "low": "^1.1.92",
+    "lowlight": "^2.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
